進版前備分

--- a/Cube/widget.ui
+++ b/Cube/widget.ui
@@ -25,8 +25,8 @@
    <widget class="QLabel" name="label_1">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>140</x>
+      <y>0</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -36,6 +36,45 @@
     </property>
     <property name="text">
      <string>(1)[LED OFF]</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN1_1">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>220</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN1_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>120</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN1_3">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
     </property>
    </widget>
   </widget>
@@ -51,8 +90,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>140</x>
+      <y>0</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -62,6 +101,45 @@
     </property>
     <property name="text">
      <string>(2)[LED OFF]</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN2_1">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>220</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN2_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>120</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN2_3">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
     </property>
    </widget>
   </widget>
@@ -77,8 +155,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>140</x>
+      <y>0</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -106,6 +184,45 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="labelN3_1">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>220</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN3_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>120</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN3_3">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QWidget" name="widget_D4" native="true">
    <property name="geometry">
@@ -119,8 +236,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>140</x>
+      <y>0</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -130,6 +247,45 @@
     </property>
     <property name="text">
      <string>(4)[LED OFF]</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN4_1">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>220</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN4_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>120</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelN4_3">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00000</string>
     </property>
    </widget>
   </widget>
